package fr.uga.miage.m1.my_project.enums;

public enum TypeAction {
    COOPERER,
    TRAHIR
}
